[package]
name = "silica-crc20"
version = "0.1.0"
edition = "2021"
authors = ["Silica Protocol Team"]
license = "MIT OR Apache-2.0"
description = "CRC-20 Fungible Token Standard for Silica Protocol"
repository = "https://github.com/Silica-Contracts/crc20"
keywords = ["silica", "token", "erc20", "fungible", "smart-contracts"]
categories = ["wasm", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
silica-contract-sdk = { git = "https://github.com/Silica-Contracts/sdk" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["serde/std", "postcard/use-std"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
